--- a/border-sample1/index.html
+++ b/border-sample1/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>JS Bin</title>
+  <title>Borders in html</title>
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <div class='block'>
